static/css/list.css
#list-page .card,
#recent-posts .card {
    background-color: var(--secondary-color) !important;
    box-shadow: 0px 8px 56px rgba(15, 80, 100, 0.16);
    border-radius: .75rem;
    overflow: hidden;
    border: none;
}

#list-page .card a,
#recent-posts .card a {
    text-decoration: none;
}

#list-page .card a h5,
#recent-posts .card a h5 {
    color: var(--text-color) !important;
}

#list-page .card:hover,
#recent-posts .card:hover {
    transition: all 0.3s ease-out;
    transform: translateY(-7px);
}

#list-page .card-text *,
#recent-posts .card-text * {
    background-color: var(--secondary-color) !important;
}

#list-page .post-footer,
#recent-posts .post-footer {
    padding: .5rem 1rem;
    background-color: var(--secondary-color) !important;
    color: var(--text-color) !important;
    border-top: 1px solid rgba(15, 80, 100, 0.16);
    opacity: 0.9;
}

#list-page .post-footer a,
#recent-posts .post-footer a {
    background-color: var(--secondary-color) !important;
    color: var(--text-secondary-color) !important;
    border-color: var(--primary-color) !important;
    transition: none;
}

#list-page .post-footer a:focus,
#recent-posts .post-footer a:focus {
    box-shadow: none !important;
}

#list-page .post-footer a:hover,
#recent-posts .post-footer a:hover {
    color: var(--primary-color) !important;
}

#list-page .card > .card-header,
#recent-posts .card > .card-header {
    padding: 0 !important;
    border: none !important;
    background-color: var(--secondary-color) !important;
}

#list-page .card > .card-header .card-img-top,
#recent-posts .card > .card-header .card-img-top {
    width: 100%;
    height: 250px !important;
    background-color: transparent !important;
}

/* pagination */
#list-page ul li a {
    transition: none;
    border-color: var(--secondary-color);
    background-color: var(--secondary-color) !important;
    color: var(--text-color) !important;
}

#list-page ul li a:focus {
    box-shadow: none;
}

#list-page .page-item.active .page-link {
    border-color: var(--primary-color);
    background-color: var(--primary-color) !important;
    color: var(--secondary-color) !important;
}

